fix: icons alignment

--- a/src/global.scss
+++ b/src/global.scss
@@ -422,7 +422,7 @@ footer {
       min-width: 200px; // Minimum width of each column
       margin: 0 20px; // Space between columns
       .socialMedia {
-        margin-top: 1vh;
+        margin-top: 1.4vh;
       }
       .socialMedia,
       .workMedia {
